# AdventureworksLakehousePoc

adventureworks_dab_poc/resources/: adventureworks_dab_poc_etl.pipeline.yml  sample_job.job.yml
aw_bronze_layer/: README.md  databricks.yml  pyproject.toml
aw_bronze_layer/resources/: adventureworks.yml  adventureworks_dab_poc_etl.pipeline.yml  sample_job.job.yml
aw_silver_layer_models/: databricks.yml  pyproject.toml
aw_silver_layer_models/resources/: aw_silver_layer_models_etl.pipeline.yml  sample_job.job.yml
aw_silver_layer_models/src/aw_silver_layer_models_etl/: README.md
aw_silver_layer_sales/: README.md  databricks.yml  pyproject.toml
aw_silver_layer_sales/resources/: aw_silver_layer_models_etl.pipeline.yml
noaa_bronze_layer/: README.md  databricks.yml  pyproject.toml
noaa_bronze_layer/resources/: noaa_bronze_layer_etl.pipeline.yml  sample_job.job.yml
silver_layer_common/: README.md  databricks.yml  pyproject.toml
silver_layer_common/resources/: sample_job.job.yml  silver_layer_common_etl.pipeline.yml
silver_layer_person/: README.md  databricks.yml  pyproject.toml
silver_layer_person/resources/: sample_job.job.yml  silver_layer_person_etl.pipeline.yml
silver_layer_production/: README.md  databricks.yml  pyproject.toml
silver_layer_production/resources/: sample_job.job.yml  silver_layer_production_etl.pipeline.yml
silver_layer_production/src/silver_layer_production_etl/: README.md
silver_layer_production/src/silver_layer_production_etl/transformations/: silver_layer_production.py
(+15 files in other folders)
